# reactorx200_ros_reacher

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
config/: dqn.yaml  dqn_goal.yaml  reach_task_config.yaml  reach_task_config_discrete.yaml  reach_task_config_v1.yaml  sac.yaml  td3.yaml  td3_goal.yaml
logs/sim/dqn_goal/DQN_goal_real_time_oct26/: progress.csv
src/: __init__.py
src/reactorx200_ros_reacher/: __init__.py
src/reactorx200_ros_reacher/real/robot_envs/: reactorx200_robot_goal_real.py  reactorx200_robot_goal_real_v1.py  reactorx200_robot_real.py  reactorx200_robot_real_v1.py
src/reactorx200_ros_reacher/real/task_envs/: reactorx200_reacher_goal_real.py  reactorx200_reacher_goal_real_v1.py  reactorx200_reacher_goal_real_v2.py  reactorx200_reacher_real.py  reactorx200_reacher_real_v1.py  reactorx200_reacher_real_v2.py
src/reactorx200_ros_reacher/sim/robot_envs/: reactorx200_robot_goal_sim.py  reactorx200_robot_goal_sim_v1.py  reactorx200_robot_goal_sim_v2.py  reactorx200_robot_goal_sim_v3.py  reactorx200_robot_goal_sim_v4.py  reactorx200_robot_sim.py  reactorx200_robot_sim_v1.py  reactorx200_robot_sim_v2.py  reactorx200_robot_sim_v3.py  real_time_obs_actions.py
src/reactorx200_ros_reacher/sim/task_envs/: reactorx200_reacher_discrete_goal_sim_v0.py  reactorx200_reacher_discrete_sim_v0.py  reactorx200_reacher_goal_sim.py  reactorx200_reacher_goal_sim_v1.5.py  reactorx200_reacher_goal_sim_v1.75.py  reactorx200_reacher_goal_sim_v1.py  (+6 more)
src/scripts/: plot_3D_scatter.py  train_real.py  train_sim.py  validate_real.py  validate_sim.py
